--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+persona:
+    resource: "@PersonaBundle/Resources/config/routing.php"
+    prefix:   /
+
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
